<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     
    <Button
      android:id="@+id/btn_logout_exit"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/btn_submit_bg"
      android:gravity="center"
      android:text="@string/close_app"
      android:textColor="@color/text_white"
      android:textSize="20sp" />
     
  <Button
      android:id="@+id/btn_logout_change"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/btn_submit_bg"
      android:gravity="center"
      android:text="@string/exit_user"
      android:textColor="@color/text_white"
      android:textSize="20sp" />
        
   <Button
      android:id="@+id/btn_cancel"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:background="@drawable/btn_submit_bg"
      android:gravity="center"
      android:text="@string/cancel"
      android:textColor="@color/text_white"
      android:textSize="20sp" />

</LinearLayout>