<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/rl_header_title"
        layout="@layout/common_header_layout" />


    <!--  手机验证码   -->
    <RelativeLayout
        android:id="@+id/rl_mail_check"
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_user_checkcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icon_login_pwd" />

        <EditText
            android:id="@+id/et_user_checkcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:textCursorDrawable="@null" 
            android:background="@null"
            android:layout_toRightOf="@id/iv_user_checkcode"
            android:hint="@string/et_mobile_check_title"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="12sp" >
            
        </EditText>
        
        <Button
            android:id="@+id/btn_checkcode_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_submit_bg"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/btn_get_check_title"
            android:textColor="@color/text_white"
            android:textSize="20sp" />
        
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/title_base_green" />

    <Button
        android:id="@+id/btn_user_check"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_submit_bg"
        android:gravity="center"
        android:text="@string/btn_mail_check_title"
        android:textColor="@color/text_white"
        android:textSize="20sp" />

</LinearLayout>