<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--  登录用户名   -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/login_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/login_iv_name"
            android:textCursorDrawable="@null" 
            android:inputType="textPassword"
            android:background="@null"
            android:hint="@string/input_new_user_pwd"
            android:singleLine="true"
            android:textSize="12sp" >
            
        </EditText>
        
    </RelativeLayout>

    <!--  横线   -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/title_base_green" />

    <!--  登录密码   -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:layout_marginTop="20dp">


        <EditText
            android:id="@+id/login_two_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textCursorDrawable="@null" 
            android:background="@null"
            android:hint="@string/input_two_user_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="12sp" >
        </EditText>
        
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/title_base_green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/edit_pwd_title"
        android:textColor="@color/myred"/>

    <LinearLayout
        android:id="@+id/ll_pwd_check_alert"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pwd_check_low"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/pwd_check_low"
            android:gravity="center"
            android:text="低"/>

        <TextView
            android:id="@+id/tv_pwd_check_middle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/text_white"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/pwd_check_middle"
            android:gravity="center"
            android:text="中"/>

        <TextView
            android:id="@+id/tv_pwd_check_high"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/text_white"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/pwd_check_high"
            android:gravity="center"
            android:text="高"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
	    android:orientation="horizontal" >
     
     <Button
        android:id="@+id/login_btn_submit"
        android:layout_height="35dp"
       	android:layout_width="0dp"
	    android:layout_weight="1"
        android:background="@drawable/btn_submit_bg"
        android:gravity="center"
        android:layout_marginRight="15dp"
        android:text="@string/ok"
        android:textColor="@color/text_white"
        android:textSize="18sp" /> 
        
      <Button
	        android:id="@+id/btn_cancel"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="35dp"
	        android:background="@drawable/btn_submit_bg"
	        android:gravity="center"
	        android:text="@string/cancel"
	        android:textColor="@color/text_white"
	        android:textSize="18sp" /> 
         
    </LinearLayout>
        
        


</LinearLayout>