<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="38dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_header" />

       <TextView
	        android:id="@+id/tv_version_info"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:gravity="center"
	        android:text="V:1.0"
	        android:textColor="@color/text_hint_color"
	        android:textSize="15sp" />
       
    </RelativeLayout>

    <!--  登录用户名   -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/login_iv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icon_login_name" />

        <EditText
            android:id="@+id/et_login_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/login_iv_name"
            android:textCursorDrawable="@null" 
            android:background="@null"
            android:maxLength="20"
            android:hint="@string/login_user_name_title"
            android:singleLine="true"
            android:textSize="12sp" >
            
        </EditText>
        
    </RelativeLayout>

    <!--  横线   -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/title_base_green" />

    <!--  登录密码   -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/login_iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icon_login_pwd" />

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:textCursorDrawable="@null" 
            android:background="@null"
            android:layout_toRightOf="@+id/login_iv_pwd"
            android:hint="@string/login_user_pwd_title"
            android:maxLength="20"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="12sp" >
            
        </EditText>

        <ToggleButton
            android:id="@+id/tb_password_show"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="32dp"
            android:layout_height="17dp"
            android:background="@android:color/transparent"
            android:button="@drawable/pwd_switch_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />

        <Button
            android:id="@+id/btn_checkcode_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_submit_bg"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/btn_get_check_title"
            android:textColor="@color/text_white"
            android:textSize="20sp" />

        
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/title_base_green" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cb_login_remember"
            android:button="@drawable/btn_check"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_tv_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/cb_login_remember"
            android:hint="@string/login_remember_name_title" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:focusable="true"
            android:text="@string/login_forget_pwd_title"
            android:textColor="@color/text_hint_color" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_submit_bg"
        android:gravity="center"
        android:text="@string/btn_login_submit_title"
        android:textColor="@color/text_white"
        android:textSize="20sp" />

</LinearLayout>
</ScrollView>