<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_detail_ui" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_white" >

            <ImageView
                android:id="@+id/setting_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/my_photo_imager" />

            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/setting_user_icon"
               	android:layout_marginLeft="10dp"
                android:orientation="vertical">
                
	            <TextView
	                android:id="@+id/setting_tv_user_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="用户名" />
                <TextView
	                android:id="@+id/setting_tv_organ_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	               />
				
	            <!-- 
            	<TextView
	                android:id="@+id/setting_tv_user_sex"
	                android:layout_marginTop="6dp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="男" />
            	 -->
				</LinearLayout>
				
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_update_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/text_white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/setting_update_pwd"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/icon_setting_item_left_arrow" />
            
        </RelativeLayout>
        
        <!-- 版本检查 -->
        <RelativeLayout
            android:id="@+id/rl_setting_version"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/text_white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/setting_version_check"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/icon_setting_item_left_arrow" />
            
        </RelativeLayout>

        <!-- 缓存空间清理 -->
        <RelativeLayout
            android:id="@+id/rl_data_clear"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/text_white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/setting_data_clear"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/icon_setting_item_left_arrow" />

        </RelativeLayout>

        <!-- 退出  -->
        <RelativeLayout
            android:id="@+id/rl_setting_logout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/text_white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/setting_logout"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/icon_setting_item_left_arrow" />
            
        </RelativeLayout>

    </LinearLayout>

</ScrollView>