<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/rl_header_title"
        layout="@layout/common_header_layout" />

    <!--  登录密码   -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/login_iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icon_login_pwd" />

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:textCursorDrawable="@null"
            android:background="@null"
            android:layout_toRightOf="@+id/login_iv_pwd"
            android:hint="@string/input_new_user_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="12sp" >

        </EditText>

        <ToggleButton
            android:id="@+id/tb_new_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="32dp"
            android:layout_height="17dp"
            android:background="@android:color/transparent"
            android:button="@drawable/pwd_switch_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/title_base_green" />

    <!--  登录密码   -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/login_iv_pwd_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icon_login_pwd" />

        <EditText
            android:id="@+id/et_login_pwd_two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:textCursorDrawable="@null"
            android:background="@null"
            android:layout_toRightOf="@id/login_iv_pwd_two"
            android:hint="@string/input_two_user_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="12sp" >

        </EditText>

        <ToggleButton
            android:id="@+id/tb_re_new_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="32dp"
            android:layout_height="17dp"
            android:background="@android:color/transparent"
            android:button="@drawable/pwd_switch_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/title_base_green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/edit_pwd_title"
        android:textColor="@color/myred"/>

    <LinearLayout
        android:id="@+id/ll_pwd_check_alert"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pwd_check_low"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/pwd_check_low"
            android:gravity="center"
            android:text="低"/>

        <TextView
            android:id="@+id/tv_pwd_check_middle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/text_white"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/pwd_check_middle"
            android:gravity="center"
            android:text="中"/>

        <TextView
            android:id="@+id/tv_pwd_check_high"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/text_white"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/pwd_check_high"
            android:gravity="center"
            android:text="高"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_pwd_set"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_submit_bg"
        android:gravity="center"
        android:text="@string/update_pwd_title"
        android:textColor="@color/text_white"
        android:textSize="20sp" />


</LinearLayout>